tests/tests/snapshots/host_syntax_identity__identity_expr__extras-verbs__CallUpstream.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (http-call (field-access payload path) (field-access payload payload)))
(return true)
