tests/tests/snapshots/host_syntax_identity__identity_expr__extras-verbs__IndexDoc.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (search-index (field-access payload id) (field-access payload title)))
(return true)
