tests/tests/snapshots/host_syntax_identity__identity_expr__extras-verbs__ListDocs.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(return (object-store-list (field-access payload prefix)))
