tests/tests/snapshots/host_syntax_identity__identity_expr__extras-verbs__NotifyUser.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (email-send (field-access payload to) (field-access payload subject) (field-access payload body)))
(return true)
