tests/tests/snapshots/host_syntax_identity__identity_expr__extras-verbs__SearchDocs.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (search-query (field-access payload query)))
(return true)
